--- a/ElectricFenceService/ElectricFenceService.csproj
+++ b/ElectricFenceService/ElectricFenceService.csproj
@@ -66,7 +66,8 @@
     <Compile Include="Ship\ShipParser.cs" />
     <Compile Include="Socket\DataReceiver.cs" />
     <Compile Include="Socket\MuxReceiver.cs" />
-    <Compile Include="UserMgr.cs" />
+    <Compile Include="User\OnlineMgr.cs" />
+    <Compile Include="User\UserMgr.cs" />
     <Compile Include="User\UserData.cs" />
     <Compile Include="User\UserInfo.cs" />
   </ItemGroup>
