重构； 完成目标跟踪的计算，播发，参数的配置

--- a/Fence.Util/Fence.Util.csproj
+++ b/Fence.Util/Fence.Util.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Fence.Util</RootNamespace>
     <AssemblyName>Fence.Util</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -17,20 +17,30 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\Binary\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Binary\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>2</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common">
+      <HintPath>..\Binary\Common.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\Binary\NLog.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,14 +50,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bridge.cs" />
-    <Compile Include="FenceData.cs" />
-    <Compile Include="FenceRegionsInfo.cs" />
-    <Compile Include="GateInfo.cs" />
+    <Compile Include="Socket\DataReceiver.cs" />
+    <Compile Include="Socket\MuxReceiver.cs" />
+    <Compile Include="Socket\Parser.cs" />
+    <Compile Include="Target\Bridge.cs" />
+    <Compile Include="Target\FenceData.cs" />
+    <Compile Include="Target\FenceRegionsInfo.cs" />
+    <Compile Include="Target\GateInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShieldTarget.cs" />
-    <Compile Include="ShipUnion.cs" />
-    <Compile Include="TargetObj.cs" />
+    <Compile Include="Target\ShieldInfo.cs" />
+    <Compile Include="Target\ShieldTarget.cs" />
+    <Compile Include="Target\ShipInfo.cs" />
+    <Compile Include="Target\ShipUnion.cs" />
+    <Compile Include="Target\TargetObj.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Geometry\Geometry.csproj">
