--- a/ServerHost/app.config
+++ b/ServerHost/app.config
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <!--用于接收AIS数据的IP地址-->
+    <add key="AisHost" value="127.0.0.1" />
+    <!--用于接收AIS数据的端口-->
+    <add key="AisPort" value="8020" />
+    <!--网站提供数据的websocket端口-->
+    <add key="WebSocketPort" value="8090" />
+    <!--本地播发端口，播发围栏抓拍信息-->
+    <add key="ListenPort" value="8091" />
+  </appSettings>
   <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
