--- a/ElectricFenceService/ElectricFenceService.csproj
+++ b/ElectricFenceService/ElectricFenceService.csproj
@@ -41,7 +41,13 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="SocketHelper, Version=1.18.207.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Binary\SocketHelper.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Extensions" />
@@ -53,28 +59,34 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FenceMgr.cs" />
+    <Compile Include="Fence\FenceCensorMgr.cs" />
+    <Compile Include="Fence\GateTrack.cs" />
+    <Compile Include="Fence\GateTrackInfo.cs" />
+    <Compile Include="Fence\FenceTrackMgr.cs" />
+    <Compile Include="Fence\PolygonInfo.cs" />
+    <Compile Include="Fence\ShipFenceMgr.cs" />
     <Compile Include="HttpServerMgr.cs" />
     <Compile Include="Http\HttpRequestInfo.cs" />
     <Compile Include="Http\SortSource.cs" />
+    <Compile Include="Listen\SocketListener.cs" />
+    <Compile Include="Listen\SocketsListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shield\ShieldData.cs" />
-    <Compile Include="Shield\ShieldInfo.cs" />
     <Compile Include="Shield\ShieldMgr.cs" />
     <Compile Include="Ship\ShipHistoryMgr.cs" />
     <Compile Include="Ship\ShipInfo.cs" />
     <Compile Include="Ship\ShipMgr.cs" />
     <Compile Include="Ship\ShipParser.cs" />
-    <Compile Include="Socket\DataReceiver.cs" />
-    <Compile Include="Socket\MuxReceiver.cs" />
     <Compile Include="User\OnlineMgr.cs" />
     <Compile Include="User\UserMgr.cs" />
     <Compile Include="User\UserData.cs" />
     <Compile Include="User\UserInfo.cs" />
+    <Compile Include="Util\ConfigData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Fence.Util\Fence.Util.csproj">
       <Project>{0eaa3946-b85b-47a6-ba90-b52033b91273}</Project>
       <Name>Fence.Util</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Geometry\Geometry.csproj">
       <Project>{7effe4c7-2458-415f-a142-88a1dc75d96f}</Project>
