--- a/ServerHost/app.config
+++ b/ServerHost/app.config
@@ -9,6 +9,8 @@
     <add key="WebSocketPort" value="8090" />
     <!--本地播发端口，播发围栏抓拍信息-->
     <add key="ListenPort" value="9528" />
+    <!--超时判定时长，单位：分钟-->
+    <add key="TimeoutMinutes" value="15" />
   </appSettings>
   <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
   <runtime>
