修复部分AIS严重错误产生了进出港记录异常问题； 修复部分船舶离开外围区域（雷达信号）未发送结束跟踪的命令的问题（原外围区域外超时判断使用错误，该判断可不使用，因为外面条件已经判断）

--- a/ElectricFenceService/ElectricFenceService.csproj
+++ b/ElectricFenceService/ElectricFenceService.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Fence\FenceTrackMgr.cs" />
     <Compile Include="Fence\PolygonTrack.cs" />
     <Compile Include="Fence\ShipFenceMgr.cs" />
+    <Compile Include="Track\ManualControlMgr.cs" />
     <Compile Include="Track\ShipTrackConfig.cs" />
     <Compile Include="Track\TrackEventMgr.cs" />
     <Compile Include="HttpServerMgr.cs" />
