--- a/Fence.Util/Fence.Util.csproj
+++ b/Fence.Util/Fence.Util.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Target\FenceRegionsInfo.cs" />
     <Compile Include="Target\GateInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Target\NationMgr.cs" />
     <Compile Include="Target\ShieldInfo.cs" />
     <Compile Include="Target\ShieldTarget.cs" />
     <Compile Include="Target\ShipInfo.cs" />
